--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,10 @@
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/jquery.organicTabs/src/jquery.organicTabs.js"></script>
+        <script src="bower_components/jquery-ui/ui/minified/jquery.ui.core.min.js"></script>
+        <script src="bower_components/jquery-ui/ui/minified/jquery.ui.widget.min.js"></script>
+        <script src="bower_components/jquery-ui/ui/minified/jquery.ui.mouse.min.js"></script>
+        <script src="bower_components/jquery-ui/ui/minified/jquery.ui.position.min.js"></script>
         <script src="bower_components/jquery-ui/ui/minified/jquery.ui.draggable.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
