--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
         <!-- build:css styles/vendor.css -->
         <!-- bower:css -->
         <link rel="stylesheet" href="bower_components/normalize.css/normalize.css" />
+        <link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css" />
+        <link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery.ui.theme.css" />
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
@@ -66,7 +68,7 @@
         <script src="bower_components/jquery-ui/ui/minified/jquery.ui.widget.min.js"></script>
         <script src="bower_components/jquery-ui/ui/minified/jquery.ui.mouse.min.js"></script>
         <script src="bower_components/jquery-ui/ui/minified/jquery.ui.position.min.js"></script>
-        <script src="bower_components/jquery-ui/ui/minified/jquery.ui.draggable.min.js"></script>
+        <script src="bower_components/jquery-ui/ui/minified/jquery.ui.resizable.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
