warn when JS is disabled

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+        <p class="js-warning hide">This page needs JavaScript in your browser to be enabled.</p>
 
         <div class="container">
         
@@ -60,6 +61,7 @@
         </div>
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
+        <script src="scripts/modernizr.custom.74216.js"></script>
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/jquery.organicTabs/src/jquery.organicTabs.js"></script>
         <script src="bower_components/jquery-ui/ui/minified/jquery.ui.core.min.js"></script>
