small screen fixes

--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
         <script src="bower_components/jquery-ui/ui/minified/jquery.ui.mouse.min.js"></script>
         <script src="bower_components/jquery-ui/ui/minified/jquery.ui.position.min.js"></script>
         <script src="bower_components/jquery-ui/ui/minified/jquery.ui.draggable.min.js"></script>
+        <script src="bower_components/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
